# tvm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  pyproject.toml  test_example_comparison.py  test_helper_detection.py  test_optimization.py  test_printer_debug.py  test_python_function_format.py  test_python_printer_main.py  test_raw_string_conversion.py  test_simple_fix.py  test_simple_pyfunc.py  test_tir_debug.py  test_tvmscript_print.py
.claude/commands/: tir-bench-baseline-20260524.md.bak  tir-bench.md
.claude/commands/tir-bench/: baseline.json  baseline.md  baseline_view.py  ratio_diff.py  run.py  workloads.yaml
.claude/skills/: tirx-evolve.md  tirx-transcription.md
.claude/skills/axe-layout/: SKILL.md
.github/actions/build-wheel-for-publish/: action.yml
.github/workflows/: main.yml  publish_wheel.yml
.txdev/decisions/: index.yaml
.txdev/decisions/entries/: ADR-20260227-0001.yaml  ADR-20260227-0002.yaml  ADR-20260228-0001.yaml  ADR-20260228-0002.yaml  ADR-20260228-0003.yaml  ADR-20260301-0001.yaml  ADR-20260301-0002.yaml  ADR-20260301-0003.yaml  ADR-20260306-195314-450625.yaml  ADR-20260307-231252-f0561c.yaml  ADR-20260308-232603-16186a.yaml  ADR-20260308-232603-d77714.yaml
.txdev/knowledge/: index.yaml
.txdev/knowledge/entries/: KB-20260227-0001.yaml  KB-20260227-0002.yaml  KB-20260227-0003.yaml  KB-20260228-0001.yaml  KB-20260228-0002.yaml  KB-20260228-0003.yaml  KB-20260228-0004.yaml  KB-20260301-0001.yaml  KB-20260301-0002.yaml  KB-20260301-0003.yaml  KB-20260301-0004.yaml  KB-20260301-0005.yaml  KB-20260302-015214-9e29ce.yaml  KB-20260306-195314-a33c27.yaml  KB-20260307-231252-48549d.yaml  KB-20260307-231252-72bc64.yaml  KB-20260308-232603-18dfc3.yaml  KB-20260308-232603-205e85.yaml  KB-20260308-232603-d83e44.yaml
.txdev/mistakes/: index.yaml
.txdev/mistakes/entries/: M-20260227-0001.yaml  M-20260227-0002.yaml  M-20260227-0003.yaml  M-20260228-0001.yaml  M-20260228-0002.yaml  M-20260228-0003.yaml  M-20260301-0001.yaml  M-20260301-0002.yaml  M-20260301-0003.yaml  M-20260302-015214-5390a0.yaml  M-20260306-195314-50a55c.yaml  M-20260307-231252-423c4d.yaml  M-20260308-232603-9a9463.yaml  M-20260308-232603-cf510d.yaml
ci/scripts/package/: README.md  macos_repair_wheel.sh  manylinux_build_libtvm_runtime_cuda.sh  windows_build_libtvm_runtime_cuda.sh
cmake/modules/: CUDA.cmake  Hexagon.cmake  Metal.cmake  OpenCL.cmake  ROCM.cmake  Vulkan.cmake
cmake/modules/contrib/: flashinfer.cmake
cmake/utils/: FindLLVM.cmake
docker/install/: ubuntu_install_core.sh  ubuntu_install_cuda_python.sh
docs/: errors.rst  index.rst
docs/arch/: index.rst  introduction_to_module_serialization.rst
docs/deep_dive/tensor_ir_next/: abstraction.rst  architecture.rst  cuda_intrinsics.rst  dsl_utilities.rst  execution_model.rst  gpu_architecture.rst  gpu_async.rst  gpu_tensorcore.rst  index.rst  layout.rst  new_backend.rst  operators.rst  trainium.rst
docs/how_to/tutorials/: export_and_load_executable.py  optimize_llm.py
examples/: python_printer_demo.py
include/tvm/arith/: analyzer.h  int_set.h  iter_affine_map.h
include/tvm/ir/: function.h  tensormap_type.h  type.h
include/tvm/node/: script_printer.h
include/tvm/relax/: analysis.h  block_builder.h  dataflow_pattern.h  expr.h  tir_pattern.h  utils.h
include/tvm/runtime/: data_type.h  device_api.h  logging.h
include/tvm/s_tir/: analysis.h
include/tvm/tir/: analysis.h  async_structs.h  buffer.h  builtin.h  event.h  exec_scope.h  expr_functor.h  function.h  layout.h  op.h  predicate.h  stmt.h  stmt_functor.h  tirp_op.h  tirp_stmt.h  tirx_op.h  tirx_stmt.h  transform.h
include/tvm/tirx/: analysis.h  index_map.h
include/tvm/topi/: transform.h
kernels/sm100/: fp16_bf16_gemm.py  fp8_blockwise_gemm.py  gemm.py  nvfp4_gemm.py
python/tvm/: __init__.py
python/tvm/contrib/: nvcc.py
python/tvm/ir/: base.py  tensormap_type.py  type.py
python/tvm/relax/: __init__.py  base_py_module.py  expr.py  relax_to_pyfunc_converter.py  utils.py
python/tvm/rpc/: server.py
python/tvm/runtime/: __init__.py  _tensor.py  attn_plan_info.py  script_printer.py
python/tvm/s_tir/: pipeline.py
python/tvm/script/: tir.py  tirp.py  tirx.py
python/tvm/support/: nvcc.py
python/tvm/testing/: disco.py  utils.py
python/tvm/tir/: __init__.py  async_structs.py  buffer.py  build.py  event.py  exec_scope.py  expr.py  expr_functor.py  (+7 more)
relax_export_artifacts/: model_params.npz
rust/tirx-ext/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
rust/tirx-ext/docs/: install.md
rust/tirx-ext/python/tirx_ext/: __init__.py  _ffi_api.py
rust/tirx-ext/rust/: Cargo.toml  build.rs
rust/tirx-ext/rust/downstream-api-test/: Cargo.toml
rust/tirx-ext/rust/downstream-api-test/src/: lib.rs
rust/tirx-ext/rust/src/: layout.rs  lib.rs  mutate.rs  node.rs  object_ref.rs  reflect.rs  runtime.rs  visit.rs
rust/tirx-ext/rust/tests/: dispatch_public_api.rs
rust/tirx-ext/rust/tvm-tirx-macros/: Cargo.toml
rust/tirx-ext/rust/tvm-tirx-macros/src/: lib.rs
rust/tirx-ext/rust/tvm-tirx-macros/tests/: compile.rs
rust/tirx-ext/tests/: test_count_loops.py  test_mutate.py
rust/tirx-ext/tools/: tvm-ffi-config
src/arith/: analyzer.cc  canonical_simplify.cc  int_set.cc  ir_mutator_with_analyzer.cc  ir_visitor_with_analyzer.cc  iter_affine_map.cc  modular_set.cc  rewrite_simplify.cc  solve_linear_inequality.cc
src/ir/: apply_pass_to_function.cc  function.cc  type.cc
src/node/: script_printer.cc
src/relax/: utils.cc
src/runtime/: thread_storage_scope.h
tests/cpp/: container_test.cc  nested_msg_test.cc
tests/lint/: check_file_type.py
tirp_doc/: gemm_tutorial.ipynb  layout.md  overview.md
tirx_doc/: gemm_tutorial.ipynb
(+781 files in other folders)
